tests/ui/consts/issue-87046.stderr
error: cannot use unsized non-slice type `Username` in constant patterns
  --> $DIR/issue-87046.rs:28:13
   |
LL | pub const ROOT_USER: &Username = Username::from_str("root");
   | ------------------------------ constant defined here
...
LL |             ROOT_USER => true,
   |             ^^^^^^^^^

error: aborting due to 1 previous error

